[gd_scene load_steps=41 format=2]

[ext_resource path="res://Pics/Minigames/game.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/Båt_spelare.gd" type="Script" id=2]
[ext_resource path="res://Pics/Mapbuilding/Strand/hav_djupt.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Minigames/Båtrace.gd" type="Script" id=4]
[ext_resource path="res://Pics/Minigames/Boatrace/island.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/Minigames/Ready_screen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pics/Minigames/Boatrace/waves.png" type="Texture" id=7]
[ext_resource path="res://Pics/Minigames/Boatrace/island_sanddyna.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Minigames/Båt_grön.gd" type="Script" id=9]
[ext_resource path="res://Pics/Minigames/Boatrace/rutor.png" type="Texture" id=10]
[ext_resource path="res://Pics/Minigames/Boatrace/goal.png" type="Texture" id=11]
[ext_resource path="res://Pics/Minigames/Boatrace/strand.png" type="Texture" id=12]
[ext_resource path="res://Pics/Minigames/Boatrace/stopwatch.png" type="Texture" id=13]
[ext_resource path="res://UI/Dialog.tres" type="Theme" id=14]
[ext_resource path="res://Pics/Mapbuilding/Strand/palm.png" type="Texture" id=15]
[ext_resource path="res://UI/dogicapixel.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://UI/STOR_font.tres" type="DynamicFont" id=17]
[ext_resource path="res://Scenes/UI/Minigames/Winscreen.tscn" type="PackedScene" id=18]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 1336, 1042 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1336, 0, 1336, 1042 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2672, 0, 1336, 1042 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Vågor",
"speed": 1.5
} ]

[sub_resource type="Curve2D" id=12]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 736, 117, -163.79, -70.5556, 163.79, 70.5556, 1112, 158, -7.55953, -90.7143, 7.55953, 90.7143, 1404, 386, 85.6746, -45.3572, -85.6746, 45.3572, 1329, 657, 163.879, -7.85723, -163.879, 7.85723, 959, 805, 11.3393, 199.068, -11.3393, -199.068, 109, 597, -27.7183, 199.068, 27.7183, -199.068, 93, 320, 15.1191, 2.51984, -15.1191, -2.51984, 331, 171, 0, 0, 0, 0, 736, 117 )
}

[sub_resource type="Curve2D" id=13]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 737, 179, -4.24264, -11.3137, 4.24264, 11.3137, 1010, 200, -46.6691, -52.3259, 46.6691, 52.3259, 1197, 262, -29.6985, -97.5807, 29.6985, 97.5807, 1344, 389, 5.65685, -45.2548, -5.65685, 45.2548, 1357, 518, 31.1127, -46.6691, -31.1127, 46.6691, 1285, 719, 125.865, 12.7279, -125.865, -12.7279, 1003, 821, 0, 0, 0, 0, 385, 707, 3.56359, 144.326, -3.56359, -144.326, 53, 575, -13, 122, 13, -122, 179, 304, -99.4456, 50.0565, 99.4456, -50.0565, 302, 120, 0, 0, 0, 0, 737, 179 )
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 38, 720.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 18, 281 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 27.5, 165 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0.572549, 0.572549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=23]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0470588, 0.709804, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.223529, 0.227451, 0.682353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=21]
/fonts/STOR_text = ExtResource( 17 )
RichTextLabel/fonts/bold_font = ExtResource( 17 )

[sub_resource type="DynamicFont" id=22]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=26]
size = 110
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 30
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=28]
extra_spacing_top = 30
extra_spacing_char = 10
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 512.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1024.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 512.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FÖRLUST:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("vinnare:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=30]
resource_name = "WIN"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 512.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1024.0, 512.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FÖRLUST:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("vinnare:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}

[sub_resource type="Animation" id=24]
resource_name = "Default"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Palm3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 109.898, 114.367, 109.9, 114.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Palm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12, 15, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.87118, 2.40823, -6.36404, 0.912827, 7.53599, 11.8676, 5.05229 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Palm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10.1, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 29.9029, 20.9975, 29.9029 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Palm4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12, 15, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 124.885, 119.738, 134.423, 118.931, 136.791, 125.418, 135.23 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Palm5:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.4, 10, 14.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 153.627, 156.961, 157.103 ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Palm3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 109.898 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Palm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.87118 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Palm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 29.9029 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Palm4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 124.885 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Palm5:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 156.961 ]
}

[node name="Båtrace" type="Node2D"]
position = Vector2( 8, 3 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="Sandbank" type="Sprite" parent="."]
modulate = Color( 0.184314, 0.521569, 0.768627, 1 )
position = Vector2( 689.616, 408.996 )
scale = Vector2( 1.31679, 1.58568 )
texture = ExtResource( 8 )

[node name="Waves" type="AnimatedSprite" parent="."]
modulate = Color( 0.533333, 0.627451, 0.639216, 1 )
position = Vector2( 698.616, 431.996 )
frames = SubResource( 8 )
animation = "Vågor"
frame = 2
playing = true

[node name="Island" type="StaticBody2D" parent="."]
position = Vector2( -126.384, 15.9964 )
collision_layer = 8

[node name="Island_sprite" type="Sprite" parent="Island"]
position = Vector2( 821, 412 )
texture = ExtResource( 5 )

[node name="Island_collision" type="CollisionPolygon2D" parent="Island"]
visible = false
polygon = PoolVector2Array( 595, 244, 635, 245, 669, 251, 729, 258, 771, 257, 789.519, 260.233, 814, 253, 867, 233, 892, 229, 921, 231, 953, 247, 992, 276, 1031, 311, 1087, 352, 1130, 380, 1179, 400, 1192.22, 413.622, 1210, 423, 1231, 445, 1244, 471, 1244, 503, 1234, 517, 1215, 527, 1189, 529, 1141, 511, 1097, 506, 1044, 523, 985, 568, 893, 629, 830, 647, 813, 650, 735, 690, 708, 703, 668, 700, 658, 676, 653, 640, 650, 611, 555, 538, 520, 508, 491, 503, 462, 485, 447, 457, 435, 439, 430, 426, 431, 411, 434, 401, 444, 364, 484, 303, 503, 282, 538, 260 )

[node name="strand" type="StaticBody2D" parent="."]
position = Vector2( 48, 23 )
scale = Vector2( 1.47407, 1.13217 )

[node name="Sprite" type="Sprite" parent="strand"]
modulate = Color( 0.391773, 0.691297, 0.738281, 1 )
position = Vector2( 607.5, 386.667 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="strand"]
position = Vector2( 589.524, 370.086 )
scale = Vector2( 1.06041, 1.11571 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="strand"]
polygon = PoolVector2Array( -113.97, 244.663, -18.3166, 40.6299, 152.639, -75.0771, 270.001, -78.6101, 354.122, -29.1476, 421.961, -23.848, 575.956, -112.174, 676.359, -123.656, 847.314, -65.3612, 928.043, -26.4978, 1063.04, -8.83259, 1167.52, -22.9647, 1265.88, -86.5594, 1295.73, -116.59, 1293.7, -201.383, -117.362, -206.683 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="strand"]
polygon = PoolVector2Array( 859.525, 673.044, 896.158, 644.78, 945.003, 624.465, 1041.33, 629.764, 1082.72, 638.597, 1149.88, 655.379, 1204.15, 663.328, 1233.32, 686.293, 1138.34, 879.727, 755.052, 889.442, 750.982, 844.396, 763.871, 800.233, 818.143, 720.74 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 684.286, 60 )
collision_mask = 14
script = ExtResource( 2 )

[node name="Båt" type="Sprite" parent="Player"]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Båt_collision" type="CollisionPolygon2D" parent="Player"]
visible = false
rotation = 1.5708
polygon = PoolVector2Array( 0, -39, 14, -20, 14, 40, -14, 40, -14, -20 )

[node name="Havet" type="ParallaxBackground" parent="."]
offset = Vector2( 1000, 0 )
transform = Transform2D( 1, 0, 0, 1, 1000, 0 )
scroll_base_offset = Vector2( 1000, 0 )

[node name="Lager1" type="ParallaxLayer" parent="Havet"]
motion_mirroring = Vector2( 2000, 0 )

[node name="Sprite" type="Sprite" parent="Havet/Lager1"]
position = Vector2( -11, 11 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Green_path" type="Path2D" parent="."]
position = Vector2( -48.3842, 1.99643 )
curve = SubResource( 12 )

[node name="Green_followpath" type="PathFollow2D" parent="Green_path"]
position = Vector2( 736, 117 )
rotation = -0.125922

[node name="Boat_green" type="KinematicBody2D" parent="Green_path/Green_followpath"]
position = Vector2( 0, -1 )
collision_layer = 4
collision_mask = 13
script = ExtResource( 9 )

[node name="Båt" type="Sprite" parent="Green_path/Green_followpath/Boat_green"]
modulate = Color( 0.0470588, 0.709804, 0.227451, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Båt_collision" type="CollisionPolygon2D" parent="Green_path/Green_followpath/Boat_green"]
visible = false
rotation = 1.5708
polygon = PoolVector2Array( 0, -39, 14, -20, 14, 40, -14, 40, -14, -20 )

[node name="Blue_path" type="Path2D" parent="."]
position = Vector2( -48.3842, 1.99643 )
curve = SubResource( 13 )

[node name="Blue_followpath" type="PathFollow2D" parent="Blue_path"]
position = Vector2( 737, 179 )
rotation = 0.037114

[node name="Boat_blue" type="KinematicBody2D" parent="Blue_path/Blue_followpath"]
collision_layer = 4
collision_mask = 13
script = ExtResource( 9 )

[node name="Båt" type="Sprite" parent="Blue_path/Blue_followpath/Boat_blue"]
modulate = Color( 0.223529, 0.227451, 0.682353, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Båt_collision" type="CollisionPolygon2D" parent="Blue_path/Blue_followpath/Boat_blue"]
visible = false
rotation = 1.5708
polygon = PoolVector2Array( 0, -39, 14, -20, 14, 40, -14, 40, -14, -20 )

[node name="Bounds" type="StaticBody2D" parent="."]
position = Vector2( -78, 494 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 28, -2 )
shape = SubResource( 14 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 746.571, 398.857 )
rotation = -1.5708
shape = SubResource( 14 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 1569.43, -71.1429 )
shape = SubResource( 14 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 838, -538 )
rotation = -1.5708
shape = SubResource( 14 )

[node name="Goal" type="Area2D" parent="."]
position = Vector2( -195.714, -25.7143 )
collision_layer = 8
collision_mask = 5

[node name="Goal" type="Sprite" parent="Goal"]
position = Vector2( 893, 318 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 830, 94 )
shape = SubResource( 15 )

[node name="Checkpoint" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint"]
position = Vector2( 700.5, 758 )
shape = SubResource( 16 )

[node name="Ready_screen" parent="." instance=ExtResource( 6 )]
margin_left = -161.429
margin_top = -327.143
margin_right = -161.429
margin_bottom = -327.143
rect_scale = Vector2( 2, 2 )

[node name="LAPS" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 14 )

[node name="Panel" type="Panel" parent="LAPS"]
margin_left = 1265.71
margin_top = 582.857
margin_right = 1457.71
margin_bottom = 830.857
custom_styles/panel = SubResource( 17 )

[node name="Rutor" type="Sprite" parent="LAPS/Panel"]
position = Vector2( -78.4609, 157.406 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
offset = Vector2( 88.3009, -116.402 )

[node name="Rutor2" type="Sprite" parent="LAPS/Panel"]
position = Vector2( -78.1429, -24.4285 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
offset = Vector2( 88.3009, -116.402 )

[node name="VBoxContainer" type="VBoxContainer" parent="LAPS/Panel"]
margin_left = 60.4286
margin_top = -0.142883
margin_right = 239.429
margin_bottom = 247.857
alignment = 1

[node name="Player" type="Panel" parent="LAPS/Panel/VBoxContainer"]
margin_top = 29.0
margin_right = 179.0
margin_bottom = 89.0
rect_min_size = Vector2( 100, 60 )
custom_styles/panel = SubResource( 18 )

[node name="Stopwatch" type="Sprite" parent="LAPS/Panel/VBoxContainer/Player"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.00012207, 27.1429 )
texture = ExtResource( 13 )

[node name="Laps_P" type="RichTextLabel" parent="LAPS/Panel/VBoxContainer/Player"]
margin_left = 68.1472
margin_top = -0.285522
margin_right = 129.147
margin_bottom = 59.7145
custom_colors/default_color = Color( 0.921569, 0.34902, 0.34902, 1 )
custom_fonts/bold_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[b]0[/b]"
text = "0"

[node name="Green" type="Panel" parent="LAPS/Panel/VBoxContainer"]
margin_top = 93.0
margin_right = 179.0
margin_bottom = 153.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 19 )

[node name="Stopwatch2" type="Sprite" parent="LAPS/Panel/VBoxContainer/Green"]
modulate = Color( 0.0470588, 0.709804, 0.227451, 1 )
position = Vector2( 37.1428, 27.4286 )
texture = ExtResource( 13 )

[node name="Laps_G" type="RichTextLabel" parent="LAPS/Panel/VBoxContainer/Green"]
margin_left = 79.5758
margin_top = 0.000183105
margin_right = 128.576
margin_bottom = 60.0002
custom_colors/default_color = Color( 0.921569, 0.34902, 0.34902, 1 )
custom_fonts/bold_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[b]0[/b]"
text = "0"

[node name="Blue" type="Panel" parent="LAPS/Panel/VBoxContainer"]
margin_top = 157.0
margin_right = 179.0
margin_bottom = 217.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 20 )

[node name="Stopwatch3" type="Sprite" parent="LAPS/Panel/VBoxContainer/Blue"]
modulate = Color( 0.223529, 0.227451, 0.682353, 1 )
position = Vector2( -5.71436, 27.7143 )
texture = ExtResource( 13 )

[node name="Laps_B" type="RichTextLabel" parent="LAPS/Panel/VBoxContainer/Blue"]
margin_left = 63.8615
margin_top = 0.285889
margin_right = 124.861
margin_bottom = 60.2859
custom_colors/default_color = Color( 0.921569, 0.34902, 0.34902, 1 )
custom_fonts/bold_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[b]0[/b]"
text = "0"

[node name="LAPS" type="RichTextLabel" parent="LAPS"]
margin_left = 1267.14
margin_top = 534.286
margin_right = 1462.14
margin_bottom = 591.286
theme = SubResource( 21 )
custom_colors/default_color = Color( 1, 0.572549, 0.572549, 1 )
custom_fonts/bold_font = SubResource( 22 )
bbcode_enabled = true
bbcode_text = "[b]LAPS:[/b]"
text = "LAPS:"

[node name="Loose_screen" type="Control" parent="."]
margin_left = -32.8571
margin_top = -31.4286
margin_right = 7.14286
margin_bottom = 8.57143
rect_scale = Vector2( 1.5, 1.5 )

[node name="ColorRect" type="ColorRect" parent="Loose_screen"]
margin_right = 512.0
margin_bottom = 600.0
color = Color( 1, 0.572549, 0.572549, 1 )

[node name="ColorRect2" type="ColorRect" parent="Loose_screen"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 0.572549, 0.572549, 1 )

[node name="FÖRLUST" type="RichTextLabel" parent="Loose_screen"]
visible = false
margin_left = 160.0
margin_top = 208.0
margin_right = 881.0
margin_bottom = 379.0
custom_colors/default_color = Color( 0.270588, 0.317647, 0.505882, 1 )
custom_fonts/bold_font = SubResource( 26 )
bbcode_enabled = true
bbcode_text = "[b][wave amp=100 freq=2]FÖRLUST![/wave][/b]"
text = "FÖRLUST!"

[node name="vinnare" type="RichTextLabel" parent="Loose_screen"]
visible = false
margin_left = 278.095
margin_top = 367.619
margin_right = 876.095
margin_bottom = 462.619
custom_fonts/bold_font = SubResource( 28 )
bbcode_enabled = true
bbcode_text = "[b][wave amp=100 freq=2] _ vann![/wave][/b]"
text = " _ vann!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loose_screen"]
anims/RESET = SubResource( 29 )
anims/WIN = SubResource( 30 )

[node name="Winscreen" parent="." instance=ExtResource( 18 )]
visible = false
margin_left = -32.8571
margin_top = -31.4286
margin_right = -32.8571
margin_bottom = -31.4286
rect_scale = Vector2( 1.5, 1.5 )

[node name="Rutor" type="Sprite" parent="."]
position = Vector2( 102.857, 652.857 )
rotation = -0.653123
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="Rutor2" type="Sprite" parent="."]
position = Vector2( 1602.86, 325.714 )
rotation = -0.201172
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="Palmer" type="Node2D" parent="."]

[node name="Palm" type="Sprite" parent="Palmer"]
modulate = Color( 1, 0.815686, 0.815686, 1 )
position = Vector2( 1522.73, 190.172 )
rotation = 0.521904
texture = ExtResource( 15 )
offset = Vector2( -300.712, -142.022 )

[node name="Palm3" type="Sprite" parent="Palmer"]
modulate = Color( 0.633179, 0.919872, 0.964844, 1 )
position = Vector2( -152.857, 1227.14 )
rotation = 1.91808
texture = ExtResource( 15 )
offset = Vector2( -300.712, -142.022 )

[node name="Palm2" type="Sprite" parent="Palmer"]
position = Vector2( 1642.86, 342.857 )
rotation = 0.119925
texture = ExtResource( 15 )
offset = Vector2( -300.712, -142.022 )

[node name="Palm4" type="Sprite" parent="Palmer"]
position = Vector2( -160, 572.857 )
rotation = 2.17965
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )
offset = Vector2( -300.712, -142.022 )

[node name="Palm5" type="Sprite" parent="Palmer"]
position = Vector2( -72.8571, 637.143 )
rotation = 2.73949
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )
offset = Vector2( -300.712, -142.022 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Palmer"]
anims/Default = SubResource( 24 )
anims/RESET = SubResource( 25 )

[connection signal="game_over" from="." to="Player" method="_on_Btrace_game_over"]
[connection signal="game_over" from="." to="Green_path/Green_followpath/Boat_green" method="_on_Btrace_game_over"]
[connection signal="game_over" from="." to="Blue_path/Blue_followpath/Boat_blue" method="_on_Btrace_game_over"]
[connection signal="ready_done" from="." to="Player" method="_on_Btrace_ready_done"]
[connection signal="ready_done" from="." to="Green_path/Green_followpath/Boat_green" method="_on_Btrace_ready_done"]
[connection signal="ready_done" from="." to="Blue_path/Blue_followpath/Boat_blue" method="_on_Btrace_ready_done"]
[connection signal="body_exited" from="Goal" to="." method="_on_Goal_body_exited"]
[connection signal="body_exited" from="Checkpoint" to="." method="_on_Checkpoint_body_exited"]
[connection signal="ready_done" from="Ready_screen" to="." method="_on_Ready_screen_ready_done"]
